unpackaged/main/default/objects/GBLite__GB_Save_Cache__c/GBLite__GB_Save_Cache__c.object-meta.xml
<CustomObject>
    <description>GridBuddy - Object that will temporarily hold data that needs to be saved for a particular user when current save context can't save all data because governors are maxed.</description>
    <label>GB Save Cache</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Save Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GB Save Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>