unpackaged/main/default/objects/GBLite__GB_Save_Cache__c/fields/GBLite__Cache1__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Cache1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cache1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>