unpackaged/main/default/objects/GBLite__GB_Save_Cache__c/fields/GBLite__Cache3__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Cache3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cache3</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>