unpackaged/main/default/objects/GBLite__GB_Save_Cache__c/fields/GBLite__ErrorCache__c.field-meta.xml
<CustomField>
    <fullName>GBLite__ErrorCache__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ErrorCache</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>