unpackaged/main/default/objects/GBLite__GB_Save_Cache__c/fields/GBLite__Grid__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Grid__c</fullName>
    <description>Name of the Grid that data is being saved for.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Grid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>