unpackaged/main/default/objects/GBLite__GB_Save_Cache__c/listViews/GBLite__All.listView-meta.xml
<ListView>
    <fullName>GBLite__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>